@@ -1,5 +1,11 @@
 2007-03-26  Ross Burton  <ross@burtonini.com>
 
+	* src/bacon-volume.[ch]:
+	Update from libbacon.  Apart from being a good thing to do this
+	also adds an accessible name (half of #364376).
+	
+2007-03-26  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Add an accessible name to the table (thanks Patrick Wade, #364372)
 
